--- a/HTML+CSS/index.html
+++ b/HTML+CSS/index.html
@@ -12,7 +12,7 @@
 <body>
     <div>
         <h1 style="color:red ;">
-            heading
+            heading ff
             sẽ có 6 thẻ từ 1 đến 6
         </h1>
         <p id="p1">
